added rounded corners

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </div>
   <div class="card">
     
-    <p class="content"> </p>
+    <p class="content">Heyy bro Happy birthday!! 
+      All the lovely pictures and memories that I'll have will be because of you fam 
+      Looking forward to working out together soon brah 💪 </p>
     <img src="https://media.discordapp.net/attachments/972456003029336084/1018399485103198228/unknown.png" class="pic" alt="...">
   </div>
   <div class="card">
