--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   </div>
   <div class="card">
     
+    <p class="content">Happy b'day prakash....in this 1 year we have been friends I've gotten so close to you...to many more years with you....and i like ur like the one person in this grp who my vibe gels with....that makes me so happy fam...always be this smiling and perfectly built Chad.....love u bb💗 </p>
+    <img src="https://media.discordapp.net/attachments/972456003029336084/1018416656449544212/unknown.png" class="pic" alt="...">
+  </div>
+  <div class="card">
+    
     <p class="content"> </p>
     <img src="" class="pic" alt="...">
   </div>
