--- a/index.html
+++ b/index.html
@@ -76,9 +76,19 @@
   </div>
   <div class="card">
     
+    <p class="content">Happy birthday iamsid011
+      Keep lifting weights at the gym and loads off my chest
+      Not even those snapsidphotography skills can capture the happiness you've brought into my life by merely being a friend
+      Love you a whole lot </p>
+    <img src="https://media.discordapp.net/attachments/972456003029336084/1018445572778246164/unknown.png" class="pic" alt="...">
+  </div>
+  <div class="card">
+    
     <p class="content"> </p>
     <img src="" class="pic" alt="...">
   </div>
+
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 <script src="index.js"></script>
