--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       Love you a whole lot </p>
     <img src="https://media.discordapp.net/attachments/972456003029336084/1018445572778246164/unknown.png" class="pic" alt="...">
   </div>
-  <div class="card">
+  <!-- <div class="card">
     
     <p class="content"> </p>
     <img src="" class="pic" alt="...">
-  </div>
+  </div> -->
 
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
