--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
       Love you a whole lot </p>
     <img src="https://media.discordapp.net/attachments/972456003029336084/1018445572778246164/unknown.png" class="pic" alt="...">
   </div>
-  <!-- <div class="card">
+
+  <div class="card">
     
-    <p class="content"> </p>
-    <img src="" class="pic" alt="...">
-  </div> -->
+    <p class="content"> Hey sid happy b'day hav a great one .can't wait to hear more stories From u n thank you being such a good friend 🫶🏻Hey sid happy b'day hav a great one .can't wait to hear more stories From u n thank you being such a good friend 🤟🏻</p>
+    <img src="https://media.discordapp.net/attachments/972456003029336084/1018717974816891003/unknown.png" class="pic" alt="...">
+  </div>
 
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
