--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-  <title>Prakash</title>
+  <title>Sid</title>
 </head>
 <body>
   <div class="card">
