chnaged srishti messafe

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div class="card">
     
-    <p class="content"> Hey sid happy b'day hav a great one .can't wait to hear more stories From u n thank you being such a good friend 🫶🏻Hey sid happy b'day hav a great one .can't wait to hear more stories From u n thank you being such a good friend 🤟🏻</p>
+    <p class="content"> Hey sid happy b'day hav a great one .can't wait to hear more stories From u n thank you being such a good friend 🤟🏻</p>
     <img src="https://media.discordapp.net/attachments/972456003029336084/1018717974816891003/unknown.png" class="pic" alt="...">
   </div>
 
